k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: adoublef-aws-ingress-class
spec:
  controller: ingress.k8s.aws/alb
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adoublef-aws-ingress
  labels:
    name: adoublef-aws-ingress
spec:
  ingressClassName: adoublef-aws-ingress-class
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: adoublef-aws-service
            port: 
              number: 80
